# HoYo.Gacha

./: .babelrc  .eslintrc.cjs  .gitignore  .prettierignore  CODE_OF_CONDUCT.md  Cargo.toml  DISK-CACHE.md  GETTING-STARTED.md  LICENSE-APACHE  LICENSE-MIT  README-CN.md  README-EN.md  README.md  eslint.config.mjs  index.html  jest.config.cjs  manifest.json  package.json  pnpm-lock.yaml  rustfmt.toml  tailwind.config.cjs  tsconfig.app.json  tsconfig.eslint.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/ISSUE_TEMPLATE/: 1-bug-report-chs.yml  2-feature-request-chs.yml  3-bug-report-en.yml  4-feature-request-en.yml
.github/workflows/: build.yml  release.yml
.scripts/: build-artifact.cjs
DiskCache/: README.md
app/: App.tsx  main.tsx  queryClient.ts  vite-env.d.ts
app/__tests__/: hello.test.ts
app/api/: command.ts  error.ts  errorTrans.ts
app/assets/: globals.css
app/components/: CopyButton.tsx  Placeholder.tsx
app/hooks/: useAutoUpdate.ts  useDialogOpenEffect.ts  useNotifier.tsx  useRecordsFetcher.ts
app/i18n/: hooks.ts  index.ts  modules.ts
app/pages/: router.ts
app/utilities/: capitalize.ts  dayjs.ts  debounce.ts  sleep.ts
cli/: Cargo.toml  README-EN.md  README.md
cli/src/: main.rs
crates/diskcache/: Cargo.toml  README.md
crates/ffi/: Cargo.toml
crates/ffi/src/: windows.rs
crates/game_biz/: Cargo.toml  README.md
crates/game_biz/src/: api.rs  lib.rs  uid.rs
crates/metadata/: Cargo.toml  README.md
crates/metadata/src/: def.rs  lib.rs  raw.rs  tests.rs  types.rs
crates/serde_helper/: Cargo.toml
crates/serde_helper/src/: lib.rs
crates/url_finder/: Cargo.toml  README.md
crates/url_finder/src/: dirty.rs  lib.rs  parse.rs  tests.rs
crates/url_scraper/: Cargo.toml  README.md
crates/url_scraper/src/: lib.rs  requester.rs  scraper.rs  tests.rs  types.rs
disk_cache/: Cargo.toml
disk_cache/src/: addr.rs  block_file.rs  entry_store.rs  lib.rs  (+1 more)
docs/: Beyond.md  DiskCache.md
gacha/: Cargo.toml
gacha/src/: excel.rs  lib.rs  log.rs  uigf.rs  url.rs
gacha_cli/: Cargo.toml
gacha_cli/src/: main.rs
gacha_log/: Cargo.toml
gacha_log/src/: lib.rs  uigf.rs
gacha_url/: Cargo.toml
gacha_url/src/: lib.rs
genshin/: Cargo.toml
genshin/src/: lib.rs
genshin_path/: Cargo.toml
public/: Logo.avif
scripts/: fontmin.mjs
src/: App.tsx  ErrorPage.tsx  Root.tsx  cli.rs  layout.tsx  main.rs  main.tsx  query-client.ts  queryClient.ts  router.tsx  routes.ts  routes.tsx  store.ts  theme.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  Tauri.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  constants.rs  consts.rs  diskcache.rs  error.rs  errors.rs  hooks.rs  lib.rs  main.rs
src-tauri/src/account/: command.rs  manage.rs  mod.rs  model.rs
src-tauri/src/bootstrap/: internals.rs  mod.rs  panic_hook.rs  singleton.rs  tauri.rs  tracing.rs  updater.rs
src-tauri/src/bootstrap/ffi/: mod.rs  windows.rs
src-tauri/src/business/: advanced.rs  data_folder_locator.rs  disk_cache.rs  gacha_convert.rs  gacha_fetcher.rs  gacha_metadata.json  gacha_metadata.rs  gacha_metadata_v2.rs  gacha_prettied.rs  gacha_url.rs  mod.rs
src-tauri/src/core/: command.rs  manage.rs  manage_gacha.rs  mod.rs
src-tauri/src/database/: account_questioner.rs  bootstrap.rs  entity_account.rs  entity_gacha_record.rs  gacha_record_questioner.rs  kvs.rs  legacy_migration.rs  macros.rs  mod.rs  plugin.rs
src-tauri/src/disk_cache/: addr.rs  block_file.rs  entry_store.rs  index_file.rs  mod.rs
src-tauri/src/gacha/: command.rs  declare.rs  facet.rs  impl_genshin.rs  impl_starrail.rs  impl_zzz.rs  mod.rs  plugin.rs  srgf.rs  uigf.rs  utilities.rs
src-tauri/src/gacha/business/: mod.rs  plugin.rs
src-tauri/src/gacha/convert/: mod.rs  plugin.rs  srgf.rs  uigf.rs
src-tauri/src/gacha/dict/: embedded.rs  mod.rs
src-tauri/src/gacha/dict/genshin_impact/: de-de.json  en-us.json  es-es.json  fr-fr.json  id-id.json  it-it.json  ja-jp.json  ko-kr.json  pt-pt.json  ru-ru.json  th-th.json  tr-tr.json  vi-vn.json  zh-chs.json  zh-cht.json
src-tauri/src/gacha/dict/honkai_star_rail/: de-de.json  en-us.json  es-es.json  fr-fr.json  id-id.json  ja-jp-ruby.json  ja-jp.json  ko-kr.json  pt-pt.json  ru-ru.json  th-th.json  vi-vn.json  zh-chs.json  zh-cht.json
src-tauri/src/gacha/facet/: mod.rs  plugin.rs
src-tauri/src/gacha/official/: fetcher.rs  mod.rs  model.rs
src-tauri/src/gacha/uigf/: genshin.rs  mod.rs
src-tauri/src/genshin/: command.rs  gacha_exporter.rs  gacha_fetcher.rs  gacha_importer.rs  gacha_url.rs  mod.rs  path_finder.rs
src-tauri/src/genshin/official/: mod.rs  model.rs
src-tauri/src/genshin/uigf/: convert.rs  mod.rs  model.rs  xlsx.rs
src-tauri/src/models/: account.rs  business.rs  core.rs  gacha_metadata.json  gacha_metadata.rs  gacha_record.rs  kv.rs  metadata.rs  mod.rs
src-tauri/src/storage/: entity_account.rs  entity_genshin_gacha_record.rs  entity_genshin_gacha_record_legacy.rs  entity_starrail_gacha_record.rs  entity_zzz_gacha_record.rs  gacha.rs  impl_storage.rs  legacy_migration.rs  mod.rs  utilities.rs
src-tauri/src/utilities/: commons.rs  file_dialog.rs  mod.rs  paths.rs  serde_helper.rs  windows.rs
src-tauri/src/utils/: command.rs  mod.rs  result_ext.rs
tauri/: .gitignore  Cargo.toml  Tauri.toml  build.rs
tauri/icons/: icon.icns
tauri/src/: bootstrap.rs  constants.rs  error.rs  lib.rs  main.rs  updater.rs
tauri/src/assets/: GachaMetadata.json
tauri/src/bootstrap/: context.rs  environment.rs  handlers.rs  panic_hook.rs  tauri.rs  tracing.rs
tauri/src/bootstrap/state/: mod.rs  window.rs
tauri/src/business/: converters.rs  data_folder.rs  fetcher.rs  gacha_fetcher.rs  gacha_url.rs  handlers.rs  image_resolver.rs  metadata.rs  mod.rs  prettized.rs
tauri/src/business/records/: fetcher.rs  mod.rs
tauri/src/database/: legacy.rs  mod.rs
tauri/src/database/migrations/: 20240725_initialize.sql  20250719_gacha_records_pk.sql  20251102_gacha_records_properties.sql  mod.rs
tauri/src/database/schemas/: account.rs  gacha_record.rs  key_value_pair.rs  mod.rs  shared.rs
(+2110 files in other folders)
