[package]
name = "cli"
version = "0.1.3"
edition = "2021"
description = "A tool to get Genshin Impact gacha logs."
homepage = "https://github.com/lgou2w/genshin-gacha"
repository = "https://github.com/lgou2w/genshin-gacha"
keywords = ["wish", "gacha", "genshin", "genshin-impact"]
readme = "README.md"
license = "MIT OR Apache-2.0"
default-run = "genshin-gacha-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genshin = { version = "0.1.3", path = "../genshin" }
gacha = { version = "0.1.3", path = "../gacha" }
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std"] }
clap = { version = "4.0.2", default-features = false, features = ["std", "help", "usage", "error-context"] }

[[bin]]
name = "genshin-gacha-cli"
path = "src/main.rs"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
