[package]
name = "gacha_url"
version = "0.1.0"
edition = "2021"
description = "A tool to get Genshin Impact gacha logs."
homepage = "https://github.com/lgou2w/genshin-gacha"
repository = "https://github.com/lgou2w/genshin-gacha"
keywords = ["wish", "gacha", "genshin", "genshin-impact"]
readme = "../README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
disk_cache = { version = "0.1.0", path = "../disk_cache" }
genshin_path = { version = "0.1.0", path = "../genshin_path" }
chrono = { version = "0.4.22", default-features = false, features = ["std"] }
form_urlencoded = "1.1.0"
