[package]
name = "hoyo_gacha"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["lgou2w <lgou2w@hotmail.com>"]
description = "An unofficial tool for managing and analyzing your miHoYo gacha records"
homepage = "https://github.com/lgou2w/HoYo.Gacha#readme"
repository = "https://github.com/lgou2w/HoYo.Gacha"
readme = "../README.md"
license = "MIT OR Apache-2.0"
build = "build.rs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[build-dependencies]
tauri-build = { version = "2.2.0", default-features = false, features = ["config-toml"] }

[dependencies]
async-trait = "0.1.88"
backtrace = "0.3.75"
cfg-if = "1.0.0"
exponential-backoff = "2.1.0"
futures-util = "0.3.31"
num_enum = "0.7.3"
os_info = "3.10.0"
paste = "1.0.15"
raw-window-handle = "0.6.2"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
rfd = { version = "0.15.3", default-features = false }
sha1 = "0.10.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
sys-locale = "0.3.2"
tauri-plugin-shell = "2.2.1"
tauri-plugin-clipboard-manager = "2.2.2"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["formatting", "local-offset", "macros", "serde", "serde-human-readable"] }
tokio = { version = "1.45.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time"] }
url = "2.5.4"

[dependencies.sqlx]
version = "0.8.5"
default-features = false
features = [
  "runtime-tokio",
  "sqlite",
  "time",
  "tls-native-tls"
]

# https://github.com/tauri-apps/tauri/blob/dev/crates/tauri/Cargo.toml
[dependencies.tauri]
version = "2.5.1"
default-features = false
features = [
  "wry",
  "compression",
  "objc-exception",
  "devtools"
]

# Ensure that some dependencies are version-consistent with tauri to avoid type conflicts

[target.'cfg(windows)'.dependencies]
windows-registry = "0.5.1"
windows-version = "0.1.4"
webview2-com = "0.37.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61.1"
features = [
  "Win32_Foundation",
  "Win32_Graphics",
  "Win32_Graphics_Dwm",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_Console",
  "Win32_System_Threading",
  "Win32_UI",
  "Win32_UI_Controls",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
]

[dev-dependencies]
tempfile = "3.19.1"
