[package]
name = "hoyo_gacha_serde_helper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
